namespace DotnetProjectManagement.Project.WebAPI.Modules.ProjectManagement.Domain;

public enum ProjectMemberRole
{
    Guest,
    Worker,
    Manager
}
