@startuml
left to right direction

class Project {
    + Id: Guid
    + DisplayName: string
    + Members: IDictionary<User, ProjectMemberRole>
    + Archived: bool
    + Milestones: ISet<Milestone>
    + Tasks: ISet<Task>
}

enum ProjectMemberRole {
    Guest,
    Worker,
    Manager
}

class Milestone {
    + Id: Guid
    + DisplayName: string
    + StartDate: DateOnly?
    + EndDate: DateOnly?
    + Deleted: bool
    + Project: Project
    + Tasks: ISet<Task>
}

class Task {
    + Id: Guid
    + DisplayName: string
    + Description: string
    + Open: bool
    + Project: Project
    + Milestone: Milestone?
    + Assignees: ISet<User>
}

class User {
    + Username: string
    + Projects: IDictionary<Projects, ProjectMemberRole>
    + Tasks: ISet<Task>
}

Project "1" *-- "0..*" Milestone
Project "1" *-- "0..*" Task
Project "0..*" o-- "0..*" User
Project o-- ProjectMemberRole

Milestone "0..1" --o "0..*" Task

Task "0..*" o-- "0..*" User

@enduml
